# kabua

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: action.yml
app/: page.tsx
components/: form.tsx  navbar.tsx
config/: env.ts  site.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/src/: main.rs  method.rs
styles/: globals.css
